examples/test/testpolicy6324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6324
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key17: value1
      key6: value22
      key3: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value32
          key19: value44
          key31: value26
      podSelector:
        matchLabels:
          key35: value4
          key38: value33
          key2: value27
